kubernetes/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sdf-docs-unauth
#  annotations:
#    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30s"
#    nginx.ingress.kubernetes.io/proxy-read-timeout: "20s"
#    nginx.ingress.kubernetes.io/client-max-body-size: "50m"
#    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  rules:
  - host: s3df.slac.stanford.edu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sdf-docs-svc
            port:
              number: 80
